updates for common module.

--- a/pom.xml
+++ b/pom.xml
@@ -9,26 +9,11 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.scuticommerce</groupId>
-    <artifactId>messageservice</artifactId>
+    <artifactId>messagingservice</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>messageservice</name>
     <description>Microservice for Kafka Messages</description>
-
-    <properties>
-        <java.version>1.8</java.version>
-    </properties>
-
     <dependencies>
 
     </dependencies>
-
-    <build>
-        <plugins>
-            <plugin>
-                <groupId>org.springframework.boot</groupId>
-                <artifactId>spring-boot-maven-plugin</artifactId>
-            </plugin>
-        </plugins>
-    </build>
-
 </project>
